# Llama-2-Open-Source-LLM-CPU-Inference

./: .gitignore  LICENSE  README.md  db_build.py  dbmanager.py  main.py  pyproject.toml  requirements.txt
assets/: illustrations.pptx
config/: config.yml
data/pdf/: .gitignore
models/: model_download.txt
notebooks/: main_CTransformers_LangChain.ipynb
qa/: package-lock.json  package.json
qa/src/: App.css  App.js
src/: functions.py  llm.py  openaikeys.py  prompts.py  utils.py
vectorstore/: .gitignore
vectorstore/db_faiss/: index.faiss  index.pkl
